@startuml starbet-live

entity AppUser {
    * id: <<uuid>>
    ---
    * username: text
    * email: text
    * name: text
    * surname: text
    * profile_picture: <<url>>
    * password_hash: text
    * password_salt: text
    * balance: int
    * created_at: <<date>>
    * edited_at: <<date>>
    deleted_at: <<date>>
}

entity Match {
    * id: <<uuid>>
    ---
    * name_a: text
    * name_b: text
    * starts_at: <<date>>
    * ends_at: <<date>>
    * status: MatchStatus
    * game: Game
    * odds: Odds
    * created_at: <<date>>
    * edited_at: <<date>>
    deleted_at: <<date>>
}

enum MatchStatus {
    PENDING
    LIVE
    FINISHED
    CANCELED
}

entity Game {
    * id: <<uuid>>
    ---
    * type: GameType
    * name: text
    * description: text
    * logo: <<url>>
    * genre: Genre
    * created_at: <<date>>
    * edited_at: <<date>>
    deleted_at: <<date>>

}

entity Bet {
    * id: <<uuid>>
    ---
    * user: AppUser
    * match: Match
    * amount: int
    * created_at: <<date>>
    * edited_at: <<date>>
    deleted_at: <<date>>
}

entity Odds {
    * id: <<uuid>>
    ---
    * match: Match
    * odds_a: float
    * odds_b: float
    * created_at: <<date>>
    * edited_at: <<date>>
    deleted_at: <<date>>
}

entity MoneyTransaction {
    * id: <<uuid>>
    ---
    * user: AppUser
    * amount_tokens: int
    * amount_currency: float
    * currency: Currency
    * deposit: bool
    * created_at: <<date>>
    * edited_at: <<date>>
    deleted_at: <<date>>
}

enum Currency {
    CZK
    EUR
    USD
}

enum Genre {
    MOBA
    FPS
}

Match }o--|| Game
Match ||--o{ Bet
Match ||--o{ Odds
AppUser ||--o{ Bet
AppUser ||--o{ MoneyTransaction
Match -- MatchStatus
Game -- Genre
MoneyTransaction -- Currency

@enduml